13. Fixed alignment on right axis of the currencies

--- a/src/components/Graph/Graph.module.css
+++ b/src/components/Graph/Graph.module.css
@@ -29,7 +29,7 @@
 
 .graph__link {
   position: absolute;
-  right: 64px;
+  right: 52px;
   bottom: 10px;
   display: flex;
   align-items: center;
